--- a/bitnami/mongodb-sharded/templates/shard/shard-arbiter-statefulset.yaml
+++ b/bitnami/mongodb-sharded/templates/shard/shard-arbiter-statefulset.yaml
@@ -113,7 +113,7 @@ spec:
               value: "no"
             {{- end }}
             {{- if $.Values.auth.enabled }}
-            {{- if $.Values.usePasswordFile }}
+            {{- if $.Values.auth.usePasswordFile }}
             - name: MONGODB_INITIAL_PRIMARY_ROOT_PASSWORD_FILE
               value: "/bitnami/mongodb/secrets/mongodb-root-password"
             - name: MONGODB_REPLICA_SET_KEY_FILE
